// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`profile round-trips > CineStill 50D — processImageData with default settings produces stable output 1`] = `
[
  41,
  75,
  90,
  255,
  146,
  142,
  142,
  255,
  223,
  215,
  213,
  255,
  57,
  63,
  66,
  255,
]
`;

exports[`profile round-trips > CineStill 400D — processImageData with default settings produces stable output 1`] = `
[
  38,
  77,
  93,
  255,
  153,
  147,
  146,
  255,
  227,
  219,
  218,
  255,
  58,
  64,
  67,
  255,
]
`;

exports[`profile round-trips > CineStill 800T — processImageData with default settings produces stable output 1`] = `
[
  38,
  90,
  130,
  255,
  170,
  164,
  197,
  255,
  230,
  229,
  230,
  255,
  59,
  76,
  100,
  255,
]
`;

exports[`profile round-trips > Fomapan 100 — processImageData with default settings produces stable output 1`] = `
[
  52,
  52,
  52,
  255,
  135,
  135,
  135,
  255,
  217,
  217,
  217,
  255,
  46,
  46,
  46,
  255,
]
`;

exports[`profile round-trips > Fomapan 200 — processImageData with default settings produces stable output 1`] = `
[
  54,
  54,
  54,
  255,
  135,
  135,
  135,
  255,
  215,
  215,
  215,
  255,
  47,
  47,
  47,
  255,
]
`;

exports[`profile round-trips > Fomapan 400 — processImageData with default settings produces stable output 1`] = `
[
  53,
  53,
  53,
  255,
  136,
  136,
  136,
  255,
  219,
  219,
  219,
  255,
  47,
  47,
  47,
  255,
]
`;

exports[`profile round-trips > Fuji Astia 100F — processImageData with default settings produces stable output 1`] = `
[
  29,
  69,
  89,
  255,
  126,
  137,
  145,
  255,
  205,
  211,
  219,
  255,
  44,
  57,
  64,
  255,
]
`;

exports[`profile round-trips > Fuji Pro 160NS — processImageData with default settings produces stable output 1`] = `
[
  33,
  81,
  101,
  255,
  128,
  152,
  161,
  255,
  208,
  225,
  230,
  255,
  47,
  69,
  77,
  255,
]
`;

exports[`profile round-trips > Fuji Provia 100F — processImageData with default settings produces stable output 1`] = `
[
  25,
  69,
  90,
  255,
  126,
  137,
  146,
  255,
  206,
  212,
  221,
  255,
  41,
  56,
  64,
  255,
]
`;

exports[`profile round-trips > Fuji Superia X-TRA 400 — processImageData with default settings produces stable output 1`] = `
[
  13,
  87,
  105,
  255,
  126,
  168,
  164,
  255,
  213,
  245,
  239,
  255,
  35,
  71,
  73,
  255,
]
`;

exports[`profile round-trips > Fuji Velvia 50 — processImageData with default settings produces stable output 1`] = `
[
  0,
  73,
  112,
  255,
  119,
  145,
  171,
  255,
  205,
  226,
  255,
  255,
  28,
  56,
  74,
  255,
]
`;

exports[`profile round-trips > Fujifilm 200 — processImageData with default settings produces stable output 1`] = `
[
  22,
  77,
  98,
  255,
  127,
  152,
  157,
  255,
  210,
  229,
  232,
  255,
  39,
  64,
  70,
  255,
]
`;

exports[`profile round-trips > Fujifilm 400 — processImageData with default settings produces stable output 1`] = `
[
  26,
  78,
  95,
  255,
  145,
  152,
  150,
  255,
  231,
  230,
  225,
  255,
  48,
  64,
  67,
  255,
]
`;

exports[`profile round-trips > Fujifilm C200 — processImageData with default settings produces stable output 1`] = `
[
  21,
  79,
  99,
  255,
  128,
  155,
  158,
  255,
  214,
  233,
  234,
  255,
  40,
  65,
  71,
  255,
]
`;

exports[`profile round-trips > Fujifilm Neopan Acros 100 II — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  135,
  135,
  135,
  255,
  214,
  214,
  214,
  255,
  49,
  49,
  49,
  255,
]
`;

exports[`profile round-trips > Fujifilm Pro 400H — processImageData with default settings produces stable output 1`] = `
[
  33,
  91,
  118,
  255,
  136,
  171,
  189,
  255,
  218,
  238,
  238,
  255,
  48,
  78,
  91,
  255,
]
`;

exports[`profile round-trips > Fujifilm Superia 400 — processImageData with default settings produces stable output 1`] = `
[
  19,
  84,
  96,
  255,
  139,
  163,
  150,
  255,
  227,
  241,
  224,
  255,
  41,
  69,
  67,
  255,
]
`;

exports[`profile round-trips > Generic B&W — processImageData with default settings produces stable output 1`] = `
[
  58,
  58,
  58,
  255,
  136,
  136,
  136,
  255,
  213,
  213,
  213,
  255,
  52,
  52,
  52,
  255,
]
`;

exports[`profile round-trips > Generic Color — processImageData with default settings produces stable output 1`] = `
[
  37,
  67,
  74,
  255,
  147,
  138,
  127,
  255,
  230,
  214,
  198,
  255,
  50,
  55,
  52,
  255,
]
`;

exports[`profile round-trips > Harman Phoenix II 200 — processImageData with default settings produces stable output 1`] = `
[
  12,
  74,
  91,
  255,
  147,
  148,
  145,
  255,
  236,
  226,
  221,
  255,
  42,
  57,
  58,
  255,
]
`;

exports[`profile round-trips > Ilford Delta 100 — processImageData with default settings produces stable output 1`] = `
[
  53,
  53,
  53,
  255,
  135,
  135,
  135,
  255,
  215,
  215,
  215,
  255,
  47,
  47,
  47,
  255,
]
`;

exports[`profile round-trips > Ilford Delta 400 — processImageData with default settings produces stable output 1`] = `
[
  45,
  45,
  45,
  255,
  131,
  131,
  131,
  255,
  217,
  217,
  217,
  255,
  38,
  38,
  38,
  255,
]
`;

exports[`profile round-trips > Ilford Delta 3200 — processImageData with default settings produces stable output 1`] = `
[
  27,
  27,
  27,
  255,
  129,
  129,
  129,
  255,
  227,
  227,
  227,
  255,
  18,
  18,
  18,
  255,
]
`;

exports[`profile round-trips > Ilford FP4 Plus — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  135,
  135,
  135,
  255,
  214,
  214,
  214,
  255,
  48,
  48,
  48,
  255,
]
`;

exports[`profile round-trips > Ilford HP5 Plus — processImageData with default settings produces stable output 1`] = `
[
  50,
  50,
  50,
  255,
  134,
  134,
  134,
  255,
  217,
  217,
  217,
  255,
  43,
  43,
  43,
  255,
]
`;

exports[`profile round-trips > Ilford Pan F Plus 50 — processImageData with default settings produces stable output 1`] = `
[
  47,
  47,
  47,
  255,
  134,
  134,
  134,
  255,
  219,
  219,
  219,
  255,
  40,
  40,
  40,
  255,
]
`;

exports[`profile round-trips > Ilford SFX 200 — processImageData with default settings produces stable output 1`] = `
[
  41,
  41,
  41,
  255,
  130,
  130,
  130,
  255,
  218,
  218,
  218,
  255,
  34,
  34,
  34,
  255,
]
`;

exports[`profile round-trips > Ilford XP2 Super — processImageData with default settings produces stable output 1`] = `
[
  59,
  59,
  59,
  255,
  136,
  136,
  136,
  255,
  214,
  214,
  214,
  255,
  52,
  52,
  52,
  255,
]
`;

exports[`profile round-trips > Kentmere Pan 200 — processImageData with default settings produces stable output 1`] = `
[
  51,
  51,
  51,
  255,
  134,
  134,
  134,
  255,
  217,
  217,
  217,
  255,
  44,
  44,
  44,
  255,
]
`;

exports[`profile round-trips > Kentmere Pan 400 — processImageData with default settings produces stable output 1`] = `
[
  54,
  54,
  54,
  255,
  137,
  137,
  137,
  255,
  218,
  218,
  218,
  255,
  48,
  48,
  48,
  255,
]
`;

exports[`profile round-trips > Kodak ColorPlus 200 — processImageData with default settings produces stable output 1`] = `
[
  42,
  77,
  78,
  255,
  171,
  151,
  128,
  255,
  245,
  229,
  203,
  255,
  66,
  62,
  50,
  255,
]
`;

exports[`profile round-trips > Kodak Double-X 5222 — processImageData with default settings produces stable output 1`] = `
[
  43,
  43,
  43,
  255,
  133,
  133,
  133,
  255,
  221,
  221,
  221,
  255,
  36,
  36,
  36,
  255,
]
`;

exports[`profile round-trips > Kodak Ektachrome E100 — processImageData with default settings produces stable output 1`] = `
[
  20,
  68,
  94,
  255,
  125,
  138,
  151,
  255,
  206,
  214,
  228,
  255,
  39,
  55,
  65,
  255,
]
`;

exports[`profile round-trips > Kodak Ektar 100 — processImageData with default settings produces stable output 1`] = `
[
  11,
  68,
  83,
  255,
  138,
  139,
  129,
  255,
  229,
  217,
  202,
  255,
  38,
  52,
  52,
  255,
]
`;

exports[`profile round-trips > Kodak Gold 100 — processImageData with default settings produces stable output 1`] = `
[
  44,
  78,
  78,
  255,
  172,
  148,
  124,
  255,
  245,
  224,
  196,
  255,
  68,
  63,
  51,
  255,
]
`;

exports[`profile round-trips > Kodak Gold 200 — processImageData with default settings produces stable output 1`] = `
[
  42,
  78,
  74,
  255,
  187,
  153,
  119,
  255,
  247,
  235,
  195,
  255,
  71,
  61,
  44,
  255,
]
`;

exports[`profile round-trips > Kodak Kodacolor 100 — processImageData with default settings produces stable output 1`] = `
[
  37,
  74,
  82,
  255,
  157,
  144,
  131,
  255,
  239,
  219,
  203,
  255,
  59,
  60,
  56,
  255,
]
`;

exports[`profile round-trips > Kodak Kodacolor 200 — processImageData with default settings produces stable output 1`] = `
[
  40,
  76,
  80,
  255,
  168,
  148,
  129,
  255,
  244,
  225,
  204,
  255,
  64,
  61,
  52,
  255,
]
`;

exports[`profile round-trips > Kodak Plus-X 125 — processImageData with default settings produces stable output 1`] = `
[
  53,
  53,
  53,
  255,
  135,
  135,
  135,
  255,
  216,
  216,
  216,
  255,
  47,
  47,
  47,
  255,
]
`;

exports[`profile round-trips > Kodak Portra 160 — processImageData with default settings produces stable output 1`] = `
[
  43,
  76,
  85,
  255,
  150,
  142,
  134,
  255,
  227,
  214,
  203,
  255,
  60,
  64,
  63,
  255,
]
`;

exports[`profile round-trips > Kodak Portra 400 — processImageData with default settings produces stable output 1`] = `
[
  48,
  79,
  83,
  255,
  166,
  147,
  130,
  255,
  233,
  220,
  200,
  255,
  68,
  66,
  59,
  255,
]
`;

exports[`profile round-trips > Kodak Portra 800 — processImageData with default settings produces stable output 1`] = `
[
  54,
  88,
  95,
  255,
  173,
  158,
  144,
  255,
  231,
  226,
  214,
  255,
  74,
  76,
  71,
  255,
]
`;

exports[`profile round-trips > Kodak Pro Image 100 — processImageData with default settings produces stable output 1`] = `
[
  42,
  75,
  83,
  255,
  153,
  143,
  134,
  255,
  233,
  218,
  205,
  255,
  60,
  62,
  60,
  255,
]
`;

exports[`profile round-trips > Kodak T-Max 100 — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  135,
  135,
  135,
  255,
  214,
  214,
  214,
  255,
  48,
  48,
  48,
  255,
]
`;

exports[`profile round-trips > Kodak T-Max 400 — processImageData with default settings produces stable output 1`] = `
[
  49,
  49,
  49,
  255,
  134,
  134,
  134,
  255,
  217,
  217,
  217,
  255,
  42,
  42,
  42,
  255,
]
`;

exports[`profile round-trips > Kodak Tri-X 400 — processImageData with default settings produces stable output 1`] = `
[
  40,
  40,
  40,
  255,
  133,
  133,
  133,
  255,
  223,
  223,
  223,
  255,
  32,
  32,
  32,
  255,
]
`;

exports[`profile round-trips > Kodak UltraMax 400 — processImageData with default settings produces stable output 1`] = `
[
  37,
  80,
  81,
  255,
  177,
  153,
  126,
  255,
  246,
  232,
  200,
  255,
  66,
  64,
  51,
  255,
]
`;

exports[`profile round-trips > Kodak Vision3 250D — processImageData with default settings produces stable output 1`] = `
[
  47,
  80,
  92,
  255,
  154,
  149,
  146,
  255,
  225,
  220,
  216,
  255,
  63,
  68,
  69,
  255,
]
`;

exports[`profile round-trips > Kodak Vision3 500T — processImageData with default settings produces stable output 1`] = `
[
  44,
  85,
  111,
  255,
  159,
  156,
  173,
  255,
  225,
  223,
  225,
  255,
  61,
  73,
  87,
  255,
]
`;

exports[`profile round-trips > LomoChrome Color '92 Sun-kissed — processImageData with default settings produces stable output 1`] = `
[
  36,
  79,
  73,
  255,
  176,
  153,
  120,
  255,
  246,
  233,
  196,
  255,
  65,
  63,
  43,
  255,
]
`;

exports[`profile round-trips > LomoChrome Color '92 — processImageData with default settings produces stable output 1`] = `
[
  19,
  77,
  97,
  255,
  146,
  150,
  153,
  255,
  234,
  228,
  228,
  255,
  44,
  62,
  66,
  255,
]
`;

exports[`profile round-trips > Lomography CN 400 — processImageData with default settings produces stable output 1`] = `
[
  21,
  76,
  84,
  255,
  164,
  151,
  132,
  255,
  248,
  231,
  209,
  255,
  53,
  59,
  50,
  255,
]
`;

exports[`profile round-trips > Lomography CN 800 — processImageData with default settings produces stable output 1`] = `
[
  27,
  79,
  90,
  255,
  169,
  155,
  141,
  255,
  244,
  234,
  219,
  255,
  57,
  63,
  56,
  255,
]
`;

exports[`profile round-trips > Rollei RPX 25 — processImageData with default settings produces stable output 1`] = `
[
  50,
  50,
  50,
  255,
  135,
  135,
  135,
  255,
  218,
  218,
  218,
  255,
  44,
  44,
  44,
  255,
]
`;

exports[`profile round-trips > Rollei RPX 100 — processImageData with default settings produces stable output 1`] = `
[
  52,
  52,
  52,
  255,
  135,
  135,
  135,
  255,
  217,
  217,
  217,
  255,
  45,
  45,
  45,
  255,
]
`;

exports[`profile round-trips > Rollei RPX 400 — processImageData with default settings produces stable output 1`] = `
[
  52,
  52,
  52,
  255,
  136,
  136,
  136,
  255,
  220,
  220,
  220,
  255,
  45,
  45,
  45,
  255,
]
`;
